--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <li><a href="#contact" class="action">contato</a></li>
               <li>
                 <a href="#"
-                  ><img src="assets/logo.svg" alt="Logo" class="logo"
+                  ><img src="assets/logo-white.svg" alt="Logo" class="logo"
                 /></a>
               </li>
               <li><a href="#massages" class="action">massagem</a></li>
@@ -67,8 +67,9 @@
 
       <main>
         <div class="hero">
-          <h1>le renovare</h1>
-          <h2>massoterapia</h2>
+          <h1>
+            <span class="red">le</span> <span class="white">renovare</span>
+          </h1>
         </div>
       </main>
     </div>
@@ -79,41 +80,266 @@
       </div>
       <div class="card-wrapper">
         <article class="service-card">
-          <img src="assets/card-one.png" alt="Imagem de massagem simples" />
-          <p>massagem</p>
+          <img src="assets/cards/card-1.png" alt="Imagem de massagem simples" />
+          <div class="card-bottom">
+            <p>Massagem Relaxante</p>
+            <a href="#contact" class="button">marcar</a>
+          </div>
         </article>
 
         <article class="service-card">
-          <img src="assets/card-two.png" alt="Imagem de massagem Shiatsu" />
-          <p>shiatsu</p>
+          <img src="assets/cards/card-2.png" alt="Imagem de massagem Shiatsu" />
+          <div class="card-bottom">
+            <p>Shiatsu</p>
+            <a href="#contact" class="button">marcar</a>
+          </div>
         </article>
 
         <article class="service-card">
           <img
-            src="assets/card-three.png"
+            src="assets/cards/card-3.png"
             alt="Imagem de massagem de Drenagem"
           />
-          <p>drenagem</p>
+          <div class="card-bottom">
+            <p>Drenagem Linfática</p>
+            <a href="#contact" class="button">marcar</a>
+          </div>
+        </article>
+
+        <article class="service-card">
+          <img
+            src="assets/cards/card-4.png"
+            alt="Imagem de massagem de Drenagem"
+          />
+          <div class="card-bottom">
+            <p>Massagem Pedras quentes</p>
+            <a href="#contact" class="button">marcar</a>
+          </div>
+        </article>
+
+        <article class="service-card">
+          <img
+            src="assets/cards/card-5.png"
+            alt="Imagem de massagem de Drenagem"
+          />
+          <div class="card-bottom">
+            <p>Massagem para Dores</p>
+            <a href="#contact" class="button">marcar</a>
+          </div>
+        </article>
+
+        <article class="service-card">
+          <img
+            src="assets/cards/card-6.png"
+            alt="Imagem de massagem de Drenagem"
+          />
+          <div class="card-bottom">
+            <p>Drenomodeladora</p>
+            <a href="#contact" class="button">marcar</a>
+          </div>
+        </article>
+
+        <article class="service-card">
+          <img
+            src="assets/cards/card-7.png"
+            alt="Imagem de massagem de Drenagem"
+          />
+          <div class="card-bottom">
+            <p>Massagem Desportiva</p>
+            <a href="#contact" class="button">marcar</a>
+          </div>
+        </article>
+
+        <article class="service-card">
+          <img
+            src="assets/cards/card-8.png"
+            alt="Imagem de massagem de Drenagem"
+          />
+          <div class="card-bottom">
+            <p>Ventosateapia</p>
+            <a href="#contact" class="button">marcar</a>
+          </div>
+        </article>
+
+        <article class="service-card">
+          <img
+            src="assets/cards/card-9.png"
+            alt="Imagem de massagem de Drenagem"
+          />
+          <div class="card-bottom">
+            <p>SPA’s</p>
+            <a href="#contact" class="button">marcar</a>
+          </div>
         </article>
       </div>
-      <a href="#contact" class="button">marque agora</a>
     </section>
 
     <section id="reviews">
       <div class="wrapper-title">
-        <h3 class="main-title">depoimentos</h3>
+        <h3 class="main-title">FeedBacks</h3>
       </div>
       <span class="object"></span>
 
       <div class="review-wrapper">
         <article class="card-review">
-          <button type="button" class="prev">
-            <img src="assets/arrow-left.svg" alt="seta esquerda" />
-          </button>
-          <img src="assets/review-one.png" alt="Review" class="review-img" />
-          <button type="button" class="next">
-            <img src="assets/arrow-right.svg" alt="seta direita" />
-          </button>
+          <figure>
+            <img src="assets/reviews/r1.png" alt="Review" class="review-img" />
+          </figure>
+          <div class="wrapper-btns">
+            <button type="button" class="prev">
+              <i class="fa-sharp fa-solid fa-circle-arrow-left"></i>
+            </button>
+            <button type="button" class="next">
+              <i class="fa-sharp fa-solid fa-circle-arrow-right"></i>
+            </button>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <section class="prices">
+      <div class="wrapper-title">
+        <h3 class="main-title">preços</h3>
+      </div>
+
+      <div class="wrapper-prices">
+        <article class="price-card">
+          <div class="top">
+            <h3>sessão avulsa</h3>
+            <p class="price">r$160</p>
+          </div>
+          <div class="content">
+            <ul>
+              <li>1 hora de sessão</li>
+              <li>Atendimento direcionado para o resultado</li>
+              <li>Conversação para identificar a causa da dor</li>
+              <li>Após a avaliação é usada a técnica que melhor atende</li>
+              <li>
+                A técnica é sempre definida pelo Massoterapeuta Especializado
+              </li>
+            </ul>
+          </div>
+          <div class="bottom">
+            <a href="#contact">quero esse</a>
+          </div>
+        </article>
+
+        <article class="price-card">
+          <div class="top">
+            <h3>sessão avulsa</h3>
+            <p class="price">r$220</p>
+          </div>
+          <div class="content">
+            <ul>
+              <li>1 hora de sessão</li>
+              <li>Atendimento direcionado para o resultado</li>
+              <li>Conversação para identificar a causa da dor</li>
+              <li>Após a avaliação é usada a técnica que melhor atende</li>
+              <li>
+                A técnica é sempre definida pelo Massoterapeuta Especializado
+              </li>
+            </ul>
+          </div>
+          <div class="bottom">
+            <a href="#contact">quero esse</a>
+          </div>
+        </article>
+
+        <article class="price-card">
+          <div class="top">
+            <h3>5 sessões de 1h</h3>
+            <p class="price">r$725</p>
+          </div>
+          <div class="content">
+            <ul>
+              <li>1 hora de sessão</li>
+              <li>Atendimento direcionado para o resultado</li>
+              <li>Conversação para identificar a causa da dor</li>
+              <li>Após a avaliação é usada a técnica que melhor atende</li>
+              <li>
+                A técnica é sempre definida pelo Massoterapeuta Especializado
+              </li>
+            </ul>
+          </div>
+          <div class="bottom">
+            <a href="#contact">quero esse</a>
+          </div>
+        </article>
+
+        <article class="price-card">
+          <div class="top">
+            <h3>5 sessões de 1h30</h3>
+            <p class="price">r$950</p>
+          </div>
+          <div class="content">
+            <ul>
+              <li>1 hora de sessão</li>
+              <li>Atendimento direcionado para o resultado</li>
+              <li>Conversação para identificar a causa da dor</li>
+              <li>Após a avaliação é usada a técnica que melhor atende</li>
+              <li>
+                A técnica é sempre definida pelo Massoterapeuta Especializado
+              </li>
+            </ul>
+          </div>
+          <div class="bottom">
+            <a href="#contact">quero esse</a>
+          </div>
+        </article>
+
+        <article class="price-card">
+          <div class="top">
+            <h3>10 sessões de 1h</h3>
+            <p class="price">r$1.300</p>
+          </div>
+          <div class="content">
+            <ul>
+              <li>1 hora de sessão</li>
+              <li>Atendimento direcionado para o resultado</li>
+              <li>Conversação para identificar a causa da dor</li>
+              <li>Após a avaliação é usada a técnica que melhor atende</li>
+              <li>
+                A técnica é sempre definida pelo Massoterapeuta Especializado
+              </li>
+            </ul>
+          </div>
+          <div class="bottom">
+            <a href="#contact">quero esse</a>
+          </div>
+        </article>
+
+        <article class="price-card">
+          <div class="top">
+            <h3>10 sessões de 1h30</h3>
+            <p class="price">r$1.700</p>
+          </div>
+          <div class="content">
+            <ul>
+              <li>1 hora de sessão</li>
+              <li>Atendimento direcionado para o resultado</li>
+              <li>Conversação para identificar a causa da dor</li>
+              <li>Após a avaliação é usada a técnica que melhor atende</li>
+              <li>
+                A técnica é sempre definida pelo Massoterapeuta Especializado
+              </li>
+            </ul>
+          </div>
+          <div class="bottom">
+            <a href="#contact">quero esse</a>
+          </div>
+        </article>
+
+        <article class="price-card">
+          <div class="top">
+            <h3>SPA's</h3>
+            <div class="content">
+              <p class="spa">A partir de</p>
+            </div>
+            <p class="price">r$300</p>
+          </div>
+          <div class="bottom">
+            <a href="#contact">quero esse</a>
+          </div>
         </article>
       </div>
     </section>
@@ -121,11 +347,13 @@
     <section id="contact">
       <div class="wrapper-contact">
         <article class="contact-article">
-          <h3 class="main-title">marque uma massagem</h3>
+          <h3 class="main-title not">Agende sua sessão</h3>
           <p>
-            Tenha um dia mais leve , desestresse seu corpo. Marque uma consulta
-            agora e deixe o seu corpo menos fadigado e preparado para o dia a
-            dia.
+            Agende sua sessão Tenha um dia mais leve, relaxe seu corpo e
+            desconecte-se dos estresses e problemas do dia a dia. O ambiente é
+            preparado terapeuticamente com musicaterapia e aromaterapia, todos
+            os detalhes são pensados cuidadosamente para você usufruir de
+            momentos inesquecíveis. Invista em você. <span>Permita-se.</span>
           </p>
           <div class="buttons">
             <a
@@ -144,16 +372,75 @@
             >
           </div>
         </article>
+        <figure>
+          <img
+            src="assets/logo-without-background.svg"
+            alt="logo Le-renovare"
+          />
+        </figure>
+      </div>
+    </section>
 
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14625.416062773864!2d-46.8284116!3d-23.5916334!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cfaab478c66359%3A0x78133cc146d5795e!2sPrime%20Office%20Park!5e0!3m2!1spt-BR!2sbr!4v1684463732480!5m2!1spt-BR!2sbr"
-          width="600"
-          height="450"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
+    <section class="observation">
+      <div class="wrapper-title">
+        <h3 class="main-title">observações</h3>
+      </div>
+
+      <div class="wrapper-observation">
+        <span class="obj-right"></span>
+        <span class="obj-left"></span>
+        <article class="observation-card one">
+          <h3>Durante a sessão</h3>
+          <h4>Pedimos que:</h4>
+          <div class="content">
+            <p>Desligue o celular (ou coloque no silencioso).</p>
+            <p>Tire os acessórios (colares e pulseiras).</p>
+            <p>
+              Fale ao terapeuta se você está com frio ou calor, se o terapeuta
+              deve usar mais ou menos pressão, se a dor estiver muito forte e o
+              local de maior intensidade do desconforto (caso esteja com dor).
+            </p>
+            <p>Tente não pensar em nada</p>
+            <p>Não prenda a respiração.</p>
+            <p>
+              Realmente tire um tempo para si, concentre-se no toque e
+              permita-se relaxar.
+            </p>
+          </div>
+        </article>
+
+        <article class="observation-card two">
+          <div class="content">
+            <p>
+              O atendimento é realizado com a roupa íntima, caso se sinta mais
+              confortável sugerimos o uso de biquíni/sunga ou de um shorts com
+              tecido leve.
+            </p>
+            <p>Não utilize cremes ou óleos antes da sessão.</p>
+            <p>
+              Chegue com 5 minutos de antecedência, por conta da agenda de
+              atendimentos o atraso impactará em redução no tempo do
+              procedimento.
+            </p>
+            <p>
+              Caso tenha algum imprevisto e não possa comparecer no dia e
+              horário agendado, nos avise com antecedência.
+            </p>
+            <p>
+              Faltas não informadas com 24h de antecedência ou o não
+              comparecimento no dia da sessão será considerado sessão realizada.
+            </p>
+            <p>O pacote de 5 sessões tem validade de 5 meses.</p>
+            <p>O pacote de 10 sessões tem validade de 10 meses.</p>
+            <p>O voucher presente tem validade de 3 meses.</p>
+            <p>
+              O espaço Le Renovare busca cada vez mais excelência em nossos
+              atendimentos, não toleramos comportamentos inadequados durante
+              nossas sessões, caso ocorra, encerraremos o atendimento, mediante
+              pagamento total do serviço. Não trabalhamos com massagem tântrica.
+            </p>
+          </div>
+        </article>
       </div>
     </section>
 
@@ -177,12 +464,22 @@
         <ul>
           <li><h3>Links rápidos</h3></li>
           <li class="footer-text"><a href="#massages">Massagens</a></li>
-          <li><a href="#reviews">Depoimentos</a></li>
+          <li><a href="#reviews">FeedBacks</a></li>
           <li><a href="#contact">Marque uma massagem</a></li>
         </ul>
       </div>
     </footer>
 
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.min.js"
+      referrerpolicy="no-referrer"
+    ></script>
+
+    <script
+      src="https://kit.fontawesome.com/17c101b897.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="js/review.js"></script>
+    <script src="js/scroll.js"></script>
   </body>
 </html>
