Change images cards

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
       <div class="card-wrapper">
         <article class="service-card">
           <img src="assets/cards/card-1.png" alt="Imagem de massagem simples" />
+
           <div class="card-bottom">
             <p>Massagem Relaxante</p>
             <a href="#contact" class="button">marcar</a>
@@ -205,7 +206,7 @@
       <div class="wrapper-prices">
         <article class="price-card">
           <div class="top">
-            <h3>sessão avulsa</h3>
+            <h3>sessão avulsa de 1h</h3>
             <p class="price">r$160</p>
           </div>
           <div class="content">
@@ -226,12 +227,12 @@
 
         <article class="price-card">
           <div class="top">
-            <h3>sessão avulsa</h3>
+            <h3>sessão avulsa de 1h30</h3>
             <p class="price">r$220</p>
           </div>
           <div class="content">
             <ul>
-              <li>1 hora de sessão</li>
+              <li>1h30 de sessão</li>
               <li>Atendimento direcionado para o resultado</li>
               <li>Conversação para identificar a causa da dor</li>
               <li>Após a avaliação é usada a técnica que melhor atende</li>
@@ -273,7 +274,7 @@
           </div>
           <div class="content">
             <ul>
-              <li>1 hora de sessão</li>
+              <li>1h30 de sessão</li>
               <li>Atendimento direcionado para o resultado</li>
               <li>Conversação para identificar a causa da dor</li>
               <li>Após a avaliação é usada a técnica que melhor atende</li>
@@ -315,7 +316,7 @@
           </div>
           <div class="content">
             <ul>
-              <li>1 hora de sessão</li>
+              <li>1h30 de sessão</li>
               <li>Atendimento direcionado para o resultado</li>
               <li>Conversação para identificar a causa da dor</li>
               <li>Após a avaliação é usada a técnica que melhor atende</li>
