Reform reviews-strcture

--- a/index.html
+++ b/index.html
@@ -180,12 +180,38 @@
         <h3 class="main-title">FeedBacks</h3>
       </div>
       <span class="object"></span>
+      <!-- <img src="assets/reviews/r1.png" alt="Review" class="review-img" /> -->
 
       <div class="review-wrapper">
         <article class="card-review">
-          <figure>
-            <img src="assets/reviews/r1.png" alt="Review" class="review-img" />
-          </figure>
+          <div class="header-container">
+            <img
+              src="assets/reviews/img.png"
+              alt="Imagem da pessoa que deu o review"
+              class="review-img"
+            />
+            <div>
+              <h4 class="name">Talita Oliveira</h4>
+              <p class="reviews">3 avaliações</p>
+            </div>
+          </div>
+          <div class="stars-container">
+            <div>
+              <i class="fa-solid fa-star star"></i>
+              <i class="fa-solid fa-star star"></i>
+              <i class="fa-solid fa-star star"></i>
+              <i class="fa-solid fa-star star"></i>
+              <i class="fa-solid fa-star star"></i>
+            </div>
+            <p class="date">10 meses atrás</p>
+          </div>
+          <div class="content-container">
+            <p class="content">
+              Profissional extremamente competente,melhor massagem que fiz na
+              vida,muito atencionsa, energia incrível, procura sempre entender o
+              paciente e oferecer o melhor atendimento! Recomentdo para todos.
+            </p>
+          </div>
           <div class="wrapper-btns">
             <button type="button" class="prev">
               <i class="fa-sharp fa-solid fa-circle-arrow-left"></i>
