Change h1 font-family

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Josefin+Sans:wght@300;400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;700&family=Shadows+Into+Light&display=swap"
       rel="stylesheet"
     />
 
@@ -71,7 +71,7 @@
             <span class="red">le</span> <span class="white">renovare</span>
           </h1>
         </div>
-      </main>
+      
     </div>
 
     <section class="main-section" id="massages">
@@ -470,6 +470,7 @@
         </article>
       </div>
     </section>
+  </main>
 
     <footer>
       <div class="footer-wrapper">
