edit gramatical errors

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               alt="Imagem de massagem de Drenagem"
             />
             <div class="card-bottom">
-              <p>Massagem Pedras quentes</p>
+              <p>Massagem com Pedras quentes</p>
               <a href="#contact" class="button">marcar</a>
             </div>
           </article>
@@ -140,7 +140,7 @@
               alt="Imagem de massagem de Drenagem"
             />
             <div class="card-bottom">
-              <p>Drenomodeladora</p>
+              <p>Dreno modeladora</p>
               <a href="#contact" class="button">marcar</a>
             </div>
           </article>
@@ -189,7 +189,7 @@
                 Presenteie alguém com esse voucher para um sessão de massagem
               </p>
             </div>
-            <a href="#contact" class="voucher-btn">Presentei já</a>
+            <a href="#contact" class="voucher-btn">Presenteie</a>
           </article>
         </div>
       </section>
