edit gramatical errors

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               alt="Imagem de massagem de Drenagem"
             />
             <div class="card-bottom">
-              <p>Massagem com Pedras quentes</p>
+              <p>Massagem com" Pedras quentes</p>
               <a href="#contact" class="button">marcar</a>
             </div>
           </article>
@@ -162,7 +162,7 @@
               alt="Imagem de massagem de Drenagem"
             />
             <div class="card-bottom">
-              <p>Ventosateapia</p>
+              <p>Ventosaterapia</p>
               <a href="#contact" class="button">marcar</a>
             </div>
           </article>
@@ -199,7 +199,6 @@
           <h3 class="main-title">FeedBacks</h3>
         </div>
         <span class="object"></span>
-        <!-- <img src="assets/reviews/r1.png" alt="Review" class="review-img" /> -->
 
         <div class="review-wrapper">
           <article class="card-review">
@@ -246,7 +245,7 @@
 
       <section class="prices">
         <div class="wrapper-title">
-          <h3 class="main-title">preços</h3>
+          <h3 class="main-title">valores</h3>
         </div>
 
         <div class="wrapper-prices">
