Change anchors links

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                 WhatsApp</a
               >
               <a
-                href="https://www.instagram.com/masso.leticialenotti/"
+                href="https://www.instagram.com/lerenovare/"
                 class="contact-button instagram"
               >
                 <img src="assets/instagram-logo.svg" alt="Instagram Logo" /> Nos
@@ -500,7 +500,7 @@
           </li>
           <li class="footer-text">
             <img src="assets/footer-icons/email.svg" alt="Icone de email" />
-            @masso.leticialenotti
+            @lerenovare
           </li>
           <li class="footer-text">
             <img src="assets/footer-icons/location.svg" alt="Icone de local" />
