Change voucher-text and service-card text

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
             />
 
             <div class="card-bottom">
-              <p>Massagem Relaxante</p>
-              <a href="#contact" class="button">marcar</a>
+              <p>Massagem relaxante</p>
+              <a href="#contact" class="button">agendar</a>
             </div>
           </article>
 
@@ -97,7 +97,7 @@
             />
             <div class="card-bottom">
               <p>Shiatsu</p>
-              <a href="#contact" class="button">marcar</a>
+              <a href="#contact" class="button">agendar</a>
             </div>
           </article>
 
@@ -107,8 +107,8 @@
               alt="Imagem de massagem de Drenagem"
             />
             <div class="card-bottom">
-              <p>Drenagem Linfática</p>
-              <a href="#contact" class="button">marcar</a>
+              <p>Drenagem linfática</p>
+              <a href="#contact" class="button">agendar</a>
             </div>
           </article>
 
@@ -118,8 +118,8 @@
               alt="Imagem de massagem de Drenagem"
             />
             <div class="card-bottom">
-              <p>Massagem com" Pedras quentes</p>
-              <a href="#contact" class="button">marcar</a>
+              <p>Massagem com pedras quentes</p>
+              <a href="#contact" class="button">agendar</a>
             </div>
           </article>
 
@@ -129,8 +129,8 @@
               alt="Imagem de massagem de Drenagem"
             />
             <div class="card-bottom">
-              <p>Massagem para Dores</p>
-              <a href="#contact" class="button">marcar</a>
+              <p>Massagem para dor</p>
+              <a href="#contact" class="button">agendar</a>
             </div>
           </article>
 
@@ -140,8 +140,8 @@
               alt="Imagem de massagem de Drenagem"
             />
             <div class="card-bottom">
-              <p>Dreno modeladora</p>
-              <a href="#contact" class="button">marcar</a>
+              <p>Dreno Modeladora</p>
+              <a href="#contact" class="button">agendar</a>
             </div>
           </article>
 
@@ -151,8 +151,8 @@
               alt="Imagem de massagem de Drenagem"
             />
             <div class="card-bottom">
-              <p>Massagem Desportiva</p>
-              <a href="#contact" class="button">marcar</a>
+              <p>Massagem desportiva</p>
+              <a href="#contact" class="button">agendar</a>
             </div>
           </article>
 
@@ -163,7 +163,29 @@
             />
             <div class="card-bottom">
               <p>Ventosaterapia</p>
-              <a href="#contact" class="button">marcar</a>
+              <a href="#contact" class="button">agendar</a>
+            </div>
+          </article>
+
+          <article class="service-card">
+            <img
+              src="assets/cards/card-10.png"
+              alt="Imagem de massagem de Drenagem"
+            />
+            <div class="card-bottom">
+              <p>Massgem terapêutica</p>
+              <a href="#contact" class="button">agendar</a>
+            </div>
+          </article>
+
+          <article class="service-card">
+            <img
+              src="assets/cards/card-11.png"
+              alt="Imagem de massagem de Drenagem"
+            />
+            <div class="card-bottom">
+              <p>Alinhamento de chakras</p>
+              <a href="#contact" class="button">agendar</a>
             </div>
           </article>
 
@@ -174,19 +196,17 @@
             />
             <div class="card-bottom">
               <p>SPA’s</p>
-              <a href="#contact" class="button">marcar</a>
+              <a href="#contact" class="button">agendar</a>
             </div>
           </article>
         </div>
         <div class="voucher-wrapper">
           <article class="voucher">
-            <div class="voucher-top">
-              <p>Voucher presente</p>
-            </div>
             <div class="voucher-content">
               <h4>Voucher presente</h4>
               <p>
-                Presenteie alguém com esse voucher para um sessão de massagem
+                Presenteie quem você ama com um voucher presente para uma sessão
+                de massagem ou SPA
               </p>
             </div>
             <a href="#contact" class="voucher-btn">Presenteie</a>
