--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
     />
 
     <link rel="stylesheet" href="css/global.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
   </head>
   <body>
     <a
@@ -541,10 +545,6 @@
       referrerpolicy="no-referrer"
     ></script>
 
-    <script
-      src="https://kit.fontawesome.com/17c101b897.js"
-      crossorigin="anonymous"
-    ></script>
     <script src="js/review.js"></script>
     <script src="js/scroll.js"></script>
   </body>
