gramatical erros fixed

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                 o local de maior intensidade do desconforto (caso esteja com
                 dor).
               </p>
-              <p>Tente não pensar em nada</p>
+              <p>Tente não pensar em nada.</p>
               <p>Não prenda a respiração.</p>
               <p>
                 Realmente tire um tempo para si, concentre-se no toque e
