gramatical erros fixed

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Le Renovare</title>
+    <meta
+      name="description"
+      content="Marque sua sessão, tenha um dia mais leve, relaxe seu corpo e desconecte-se dos estresses e problemas do dia a dia. "
+    />
 
     <link
       rel="apple-touch-icon"
@@ -177,7 +181,7 @@
               alt="Imagem de massagem de Drenagem"
             />
             <div class="card-bottom">
-              <p>Massgem terapêutica</p>
+              <p>Massagem terapêutica</p>
               <a href="#contact" class="button">agendar</a>
             </div>
           </article>
