add more prices

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           <article class="price-card">
             <div class="top">
               <h3>sessão avulsa de 1h</h3>
-              <p class="price">r$160</p>
+              <p class="price">r$150</p>
             </div>
             <div class="content">
               <ul>
@@ -296,10 +296,10 @@
             </div>
           </article>
 
-          <article class="price-card">
+          <article class="price-card c">
             <div class="top">
               <h3>sessão avulsa de 1h30</h3>
-              <p class="price">r$220</p>
+              <p class="price">r$200</p>
             </div>
             <div class="content">
               <ul>
@@ -318,7 +318,8 @@
           <article class="price-card">
             <div class="top">
               <h3>5 sessões de 1h</h3>
-              <p class="price">r$725</p>
+              <p class="price">r$650</p>
+              <p class="price lw-font">( R$ 130,00 ) por sessão</p>
             </div>
             <div class="content">
               <ul>
@@ -339,7 +340,8 @@
           <article class="price-card">
             <div class="top">
               <h3>5 sessões de 1h30</h3>
-              <p class="price">r$950</p>
+              <p class="price">r$900</p>
+              <p class="price lw-font">( R$ 180,00 ) por sessão</p>
             </div>
             <div class="content">
               <ul>
@@ -360,7 +362,8 @@
           <article class="price-card">
             <div class="top">
               <h3>10 sessões de 1h</h3>
-              <p class="price">r$1.300</p>
+              <p class="price">r$1.150</p>
+              <p class="price lw-font">( R$ 115,00 ) por sessão</p>
             </div>
             <div class="content">
               <ul>
@@ -381,7 +384,8 @@
           <article class="price-card">
             <div class="top">
               <h3>10 sessões de 1h30</h3>
-              <p class="price">r$1.700</p>
+              <p class="price">r$1.500</p>
+              <p class="price lw-font">( R$ 150,00 ) por sessão</p>
             </div>
             <div class="content">
               <ul>
