--- a/index.html
+++ b/index.html
@@ -384,8 +384,8 @@
           <article class="price-card">
             <div class="top">
               <h3>10 sessões de 1h30</h3>
-              <p class="price">r$1.500</p>
-              <p class="price lw-font">( R$ 150,00 ) por sessão</p>
+              <p class="price">r$1.650</p>
+              <p class="price lw-font">( R$ 165,00 ) por sessão</p>
             </div>
             <div class="content">
               <ul>
@@ -407,7 +407,7 @@
             <div class="top">
               <h3>SPA's</h3>
               <div class="content diff">
-                <p class="spa">A partir de</p>
+                <!-- <p class="spa">A partir de</p> -->
               </div>
               <p class="price">r$300</p>
             </div>
